# Test

./: main.py  pyproject.toml  readme.md
src/: masks.py  processing.py  widget.py
