[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Виджет для банковских операций"
authors = ["Ваше Имя <ваша_почта@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0"
black = "^23.0"
isort = "^5.12"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"